# tcmmd

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
data/: Makefile.am  org.tcmmd.conf  org.tcmmd.service  tcmmd.conf  tcmmd.service
src/: Makefile.am  gdbus-tcmmd.xml  tcdemo.c  tcmmd-dbus.c  tcmmd-dbus.h  tcmmd.c  tcmmd_rtnl.c  tcmmd_rtnl.h
tests/: Makefile.am  manual-test.sh  plot-tcmmd-log.sh  server-throttling.sh  tcmmd-log-parsing.py  test.py
